--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="page-wrapper">
         <!-- Header -->
         <header id="header" class="alt">
-            <h1><a href="index.html">Solid State</a></h1>
+            <h1><a href="index.html">CS:GO Background changer</a></h1>
             <nav>
                 <a href="#menu">Menu</a>
             </nav>
@@ -43,7 +43,7 @@
         <section id="banner">
             <div class="inner">
                 <div class="logo"><i class="icon far fa-image"></i></div>
-                <h2>This is Solid State</h2>
+                <h2>CS:GO Background changer</h2>
                 <p>Changing your CS:GO Menu background easier than ever !</p>
             </div>
         </section>
@@ -54,8 +54,8 @@
                 <div class="inner">
                     <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
                     <div class="content">
-                        <h2 class="major">Magna arcu feugiat</h2>
-                        <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+                        <h2 class="major">Update your background</h2>
+                        <p>With a simple click, the original background is saved and the one you want replace it. <br /> No struggle.</p>
                         <a href="#" class="special">Learn more</a>
                     </div>
                 </div>
@@ -90,21 +90,19 @@
                     <section class="features">
                         <article>
                             <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-                            <h3 class="major">Sed feugiat lorem</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                            <a href="#" class="special">Learn more</a>
+                            <h3 class="major">Clear interface</h3>
+                            <p>The interface is clear and easy to use, select a file, press "Update" and you're done</p>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-                            <h3 class="major">Nisl placerat</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                            <a href="#" class="special">Learn more</a>
+                            <h3 class="major">Know every detail</h3>
+                            <p>Before choosing a background, be sure it is the one you want, you can check if the file has sound, its size, ...</p>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-                            <h3 class="major">Ante fermentum</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                            <a href="#" class="special">Learn more</a>
+                            <h3 class="major">Open source</h3>
+                            <p>it's open source ! If you want to provide help or if you just want to see how it's done, come say hi !</p>
+                            <a href="https://github.com/BillyHennin/CsgoBackgroundChanger" target="_blank" class="special">Go on the repo</a>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
