--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
     <div class="fullscreen-bg">
-        <video loop="" muted="" autoplay="" class="fullscreen-bg__video" style="position: fixed;top: 0;right: 0;bottom: 0;left: 0;overflow: hidden;z-index: -10;">
+        <video loop="" muted="" autoplay="" class="fullscreen-bg__video">
             <source src="http://media.steampowered.com/apps/csgo/blog/images/nuke.webm" type="video/webm">
         </video>
     </div>
@@ -23,8 +23,8 @@
     <div id="page-wrapper">
         <!-- Header -->
         <header id="header" class="alt">
-            <h1><a href="index.html">CS:GO Background changer</a></h1>
             <nav>
+                <a href="https://github.com/BillyHennin/CsgoBackgroundChanger/releases" target="_blank" >Download</a>
                 <a href="#menu">Menu</a>
             </nav>
         </header>
@@ -33,8 +33,8 @@
             <div class="inner">
                 <h2>Menu</h2>
                 <ul class="links">
-                    <li><a href="generic.html">Generic</a></li>
-                    <li><a href="elements.html">Elements</a></li>
+                    <li><a href="updates.html">Updates</a></li>
+                    <li><a href="backgrounds.html">Backgrounds</a></li>
                 </ul>
                 <a href="#" class="close">Close</a>
             </div>
@@ -42,7 +42,6 @@
         <!-- Banner -->
         <section id="banner">
             <div class="inner">
-                <div class="logo"><i class="icon far fa-image"></i></div>
                 <h2>CS:GO Background changer</h2>
                 <p>Changing your CS:GO Menu background easier than ever !</p>
             </div>
@@ -52,68 +51,61 @@
             <!-- One -->
             <section id="one" class="wrapper spotlight style1">
                 <div class="inner">
-                    <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                    <img src="images/pic02.jpg" alt="" class="image"/>
                     <div class="content">
-                        <h2 class="major">Update your background</h2>
-                        <p>With a simple click, the original background is saved and the one you want replace it. <br /> No struggle.</p>
-                        <a href="#" class="special">Learn more</a>
+                        <h2 class="major">Download new backgrounds</h2>
+                        <p>Complete your background library with our selection.</p>
+                        <a href="#" class="special">See the selection</a>
                     </div>
                 </div>
             </section>
             <!-- Two -->
             <section id="two" class="wrapper alt spotlight style2">
                 <div class="inner">
-                    <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                    <img src="images/pic01.jpg" alt="" class="image"/>
                     <div class="content">
-                        <h2 class="major">Tempus adipiscing</h2>
-                        <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-                        <a href="#" class="special">Learn more</a>
+                        <h2 class="major">Update your background</h2>
+                        <p>With a simple click, the original background is saved and the one you want replace it. <br /> No struggle.</p>                        
                     </div>
                 </div>
             </section>
             <!-- Three -->
             <section id="three" class="wrapper spotlight style3">
                 <div class="inner">
-                    <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                    <img src="images/pic03.jpg" alt="" class="image"/>
                     <div class="content">
-                        <h2 class="major">Nullam dignissim</h2>
-                        <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-                        <a href="#" class="special">Learn more</a>
+                        <h2 class="major">Enjoy !</h2>
                     </div>
                 </div>
             </section>
             <!-- Four -->
             <section id="four" class="wrapper alt style1">
                 <div class="inner">
-                    <h2 class="major">Vitae phasellus</h2>
-                    <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+                    <h2 class="major">Informations</h2>
                     <section class="features">
                         <article>
-                            <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+                            <img src="images/pic04.jpg" class="image" alt="" />
                             <h3 class="major">Clear interface</h3>
-                            <p>The interface is clear and easy to use, select a file, press "Update" and you're done</p>
+                            <p>The interface is clear and easy to use, select a file, press "Update" and you're done.</p>
                         </article>
                         <article>
-                            <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+                            <img src="images/pic05.jpg" class="image" alt="" />
                             <h3 class="major">Know every detail</h3>
                             <p>Before choosing a background, be sure it is the one you want, you can check if the file has sound, its size, ...</p>
                         </article>
                         <article>
-                            <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+                            <img src="images/pic06.jpg" class="image" alt="" />
                             <h3 class="major">Open source</h3>
                             <p>it's open source ! If you want to provide help or if you just want to see how it's done, come say hi !</p>
                             <a href="https://github.com/BillyHennin/CsgoBackgroundChanger" target="_blank" class="special">Go on the repo</a>
                         </article>
                         <article>
-                            <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-                            <h3 class="major">Fusce consequat</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-                            <a href="#" class="special">Learn more</a>
+                            <img src="images/pic07.jpg" class="image" alt="" />
+                            <h3 class="major">Be up to date</h3>
+                            <p>Check the blog post, you'll see every news about the project.</p>
+                            <a href="#" class="special">See updates</a>
                         </article>
                     </section>
-                    <ul class="actions">
-                        <li><a href="#" class="button">Browse All</a></li>
-                    </ul>
                 </div>
             </section>
         </section>
